@@ -12,6 +12,7 @@ Cacti CHANGELOG
 -issue#5216: 1.3.0 - QA DSSTATS does not use the RRDtool Proxy stateful socket connection
 -issue#5221: ss_fping.php script times out when there is a lot of packet loss
 -issue#5264: The Net-SNMP Disk I/O Templates are not Cluster Aware
+-feature#412: Import Export for Graph and Tree rules
 -feature#1214: Move Tree Create/Remove/Modify Functions to lib/api_tree.php
 -feature#1442: Add validation to GUI inputs
 -feature#1523: Value above RRD maximum value
